# ocarina-listener

./: .gitignore  Cargo.toml  Dockerfile.cross  Jenkinsfile  README.md  REQUIREMENTS.md  REQ_TRACK.md  TODO.md
fritzing/: circuitry.fzz
ocarina-gui/: Cargo.toml  Cross.toml
ocarina-gui/src/: main.rs
ocarina-gui/ui/: app-window.slint
ocarina-gui/ui/components/: note-canvas.slint  note.slint
ocarina-os/: Dockerfile  ci-build.sh  export-image.sh  run-container.sh  set-up-yocto-files.sh  set-up-yocto-reps.sh
ocarina-os/conf-files/: bblayers.conf  local.conf
ocarina-os/meta-ocarina/conf/: layer.conf
ocarina-os/meta-ocarina/conf/distro/: ocarinaos.conf
ocarina-os/meta-ocarina/recipes-bsp/bootfiles/: rpi-config_git.bbappend
ocarina-os/meta-ocarina/recipes-connectivity/dhcpcd/: dhcpcd_%.bbappend
ocarina-os/meta-ocarina/recipes-core/base-files/: base-files_%.bbappend
ocarina-os/meta-ocarina/recipes-core/images/: core-image-minimal-initramfs.bbappend
ocarina-os/meta-ocarina/recipes-core/initramfs-framework/: initramfs-module-ocarina-splash_1.0.bb  initramfs-module-plymouth_1.0.bb
ocarina-os/meta-ocarina/recipes-core/plymouth/: plymouth_%.bbappend
ocarina-os/meta-ocarina/recipes-graphics/wayland/: weston_%.bbappend
ocarina-os/meta-ocarina/recipes-graphics/weston/: weston-init_%.bbappend  weston_%.bbappend
ocarina-os/meta-ocarina/recipes-ocarina/psplash/: psplash_%.bbappend
scripts/: bofft-run.sh  build-off-target.sh  openpi.sh  package-images-for-gh.sh  update-rust-on-image.sh
src/: main.rs  notes.rs  ocarina-splash.rs  songbook.json  songs.rs
(+20 files in other folders)
