[package]
name = "ocarina-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.14.1", features = ["backend-winit-wayland"]}

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
